--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .background-theme {
-    background-image: url('assets/img/hero.jpg');
+    background-image: url('hero.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
